--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset='UTF-8'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title> Título da sua página </title>
+    <link rel="stylesheet" href="/css/estilo.css">
   </head>
   <body>
     <div class="nome-titulo">
         Catálogo de Filmes
     </div>
-    <img src="images/camera.png">
+    <img src="images/camera.png" class="imagem-formato" id="camera">
     <div class="nome-titulo">
         VitorFlix
     </div>
