--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="nome-titulo">
         Catálogo de Filmes
     </div>
-    <img src="images/camera.png" class="imagem-formato" id="camera">
+    <img src="images/camera.png" id="camera" class="imagem-formato" >
     <div class="nome-titulo">
         VitorFlix
     </div>
