--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <div class="nome-titulo">
         VitorFlix
     </div>
+    <a href=""
+    <div class="button">Explore o catálogo</div>>
   </body>
 </html>
