--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="nome-titulo">
         VitorFlix
     </div>
-    <a href=""
-    <div class="button">Explore o catálogo</div>>
+    <a href="catalogo/index.html" class="button">
+      Explore o catálogo
+    </a>
   </body>
 </html>
