--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -10,6 +10,8 @@
     <div class="nome-titulo">
         Catálogo de Filmes
     </div>
-    
+    <div class="nome-filme">
+        Fight Club
+    </div>
   </body>
 </html>
