--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <link rel="stylesheet" href="/css/estilo.css">
   </head>
   <body>
-    <div class="nome-titulo">
-        Catálogo de Filmes
+    <div class="container">
+      <div class="content">
+        <div class="nome-titulo">
+            Catálogo de Filmes
+        </div>
+        <div class="bloco-imagem">
+          <img src="images/camera.png" id="camera" class="imagem-formato">
+        </div>
+        <div class="nome-titulo">
+            VitorFlix
+        </div>
+        <a href="catalogo/index.html" class="button">
+          Explore o catálogo
+        </a>
+      </div>
     </div>
-    <img src="images/camera.png" id="camera" class="imagem-formato" >
-    <div class="nome-titulo">
-        VitorFlix
-    </div>
-    <a href="catalogo/index.html" class="button">
-      Explore o catálogo
-    </a>
   </body>
 </html>
