--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="/css/estilo.css">
   </head>
   <body>
-    <div class="nome-titulo">
-        Catálogo de Filmes
-    </div>
-    <div class="nome-filme">
-        Fight Club
+    <div class="container">
+      <div class="content">
+        <div class="nome-titulo">
+            Catálogo de Filmes
+        </div>
+        <div class="nome-filme">
+            Fight Club
+        </div>
+      </div>
     </div>
   </body>
 </html>
