--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -15,6 +15,9 @@
         <div class="nome-filme">
             Fight Club
         </div>
+        <div class="bloco-imagem">
+          <img
+        </div>
         <hr>
       </div>
     </div>
