--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -16,7 +16,7 @@
             Fight Club
         </div>
         <div class="bloco-imagem">
-          <img
+          <img src="../images/clube da luta.jpg" class="imagem-formato">
         </div>
         <hr>
       </div>
