--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -18,6 +18,16 @@
         <div class="bloco-imagem">
           <img src="../images/clube da luta.jpg" class="imagem-formato">
         </div>
+        <div class="bloco-imagem">
+          <img src="../images/Fight-Club1-1.webp" class="imagem-catalogo">
+          <img src="../images/ydbtf997.png" class="imagem-catalogo">
+        </div>
+        <div class="descricao-filme">
+          <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+          <strong>Onde assistir?:</strong>
+        </div>
+
+
         <hr>
       </div>
     </div>
