--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -24,7 +24,19 @@
         </div>
         <div class="descricao-filme">
           <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
-          <strong>Onde assistir?:</strong>
+        </div>
+        <div class="descricao-filme texto-centro">
+          <strong>Onde assistir?</strong>
+          <div class="bloco-imagem">
+            <div class="flex-streamming">
+              <a href="www.netflix.com">
+                <img src="../images/netflix.png" class="imagem-streamming">
+              </a>
+              <a href="www.disneyplus.com">
+                <img src="../images/disneyplus.png" class="imagem-streamming">
+              </a>
+            </div>
+          </div>
         </div>
 
 
