--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -25,8 +25,10 @@
         <div class="descricao-filme">
           <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
         </div>
-        <div class="descricao-filme texto-centro">
-          <strong>Onde assistir?</strong>
+        <div class="descricao-filme">
+          <div class="texto-centro">
+            Onde assistir
+          </div>
           <div class="bloco-imagem">
             <div class="flex-streamming">
               <a href="www.netflix.com">
