--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -31,18 +31,80 @@
           </div>
           <div class="bloco-imagem">
             <div class="flex-streamming">
-              <a href="www.netflix.com">
+              <a href="www.netflix.com" title="Netflix">
                 <img src="../images/netflix.png" class="imagem-streamming">
               </a>
-              <a href="www.disneyplus.com">
+              <a href="www.disneyplus.com" title="Disney+">
                 <img src="../images/disneyplus.png" class="imagem-streamming">
               </a>
             </div>
           </div>
         </div>
+        <hr>
+        <div class="nome-filme">
+          Cidade de Deus
+      </div>
+      <div class="bloco-imagem">
+        <img src="../images/1487691544139.avif" class="imagem-formato">
+      </div>
+      <div class="bloco-imagem">
+        <img src="../images/cidade de deus.webp" class="imagem-catalogo">
+        <img src="../images/thumb-1920-340268.jpg" class="imagem-catalogo">
+      </div>
+      <div class="descricao-filme">
+        <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+      </div>
+      <div class="descricao-filme">
+        <div class="texto-centro">
+          Onde assistir
+        </div>
+        <div class="bloco-imagem">
+          <div class="flex-streamming">
+            <a href="www.netflix.com" title="Netflix">
+              <img src="../images/netflix.png" class="imagem-streamming">
+            </a>
+            <a href="www.disneyplus.com" title="Disney+">
+              <img src="../images/disneyplus.png" class="imagem-streamming">
+            </a>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="nome-filme">
+        Rocky
+    </div>
+    <div class="bloco-imagem">
+      <img src="../images/1487691544139.avif" class="imagem-formato">
+    </div>
+    <div class="bloco-imagem">
+      <img src="../images/cidade de deus.webp" class="imagem-catalogo">
+      <img src="../images/thumb-1920-340268.jpg" class="imagem-catalogo">
+    </div>
+    <div class="descricao-filme">
+      <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+    </div>
+    <div class="descricao-filme">
+      <div class="texto-centro">
+        Onde assistir
+      </div>
+      <div class="bloco-imagem">
+        <div class="flex-streamming">
+          <a href="www.netflix.com" title="Netflix">
+            <img src="../images/netflix.png" class="imagem-streamming">
+          </a>
+          <a href="www.disneyplus.com" title="Disney+">
+            <img src="../images/disneyplus.png" class="imagem-streamming">
+          </a>
+        </div>
+      </div>
+    </div>
 
 
         <hr>
+
+        <a href="../index.html" class="button">
+          Voltar à página inicial
+        </a>
       </div>
     </div>
   </body>
