--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="nome-titulo">
             VitorFlix
         </div>
-        <a href="catalogo/index.html" class="button">
+        '<a href="catalogo/index.html" class="button">
           Explore o catálogo
-        </a>
+        </a>'
       </div>
     </div>
   </body>
