--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -23,7 +23,11 @@
           <img src="../images/ydbtf997.png" class="imagem-catalogo">
         </div>
         <div class="descricao-filme">
-          <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+          <ul>
+            <li><strong>Ano:</strong> 1999</li>
+            <li><strong>Direção:</strong> David Fincher</li>
+            <li><strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br></li>
+          </ul>
         </div>
         <div class="descricao-filme">
           <div class="texto-centro">
@@ -52,7 +56,11 @@
         <img src="../images/thumb-1920-340268.jpg" class="imagem-catalogo">
       </div>
       <div class="descricao-filme">
-        <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+        <ul>
+          <li><strong>Ano:</strong></li>
+          <li><strong>Direção:</strong></li>
+          <li><strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br></li>
+        </ul>
       </div>
       <div class="descricao-filme">
         <div class="texto-centro">
@@ -81,7 +89,11 @@
       <img src="../images/thumb-1920-340268.jpg" class="imagem-catalogo">
     </div>
     <div class="descricao-filme">
-      <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+      <ul>
+        <li><strong>Ano:</strong></li>
+        <li><strong>Direção:</strong></li>
+        <li><strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br></li>
+      </ul>
     </div>
     <div class="descricao-filme">
       <div class="texto-centro">
