--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -24,9 +24,15 @@
         </div>
         <div class="descricao-filme">
           <ul>
-            <li><strong>Ano:</strong> 1999</li>
-            <li><strong>Direção:</strong> David Fincher</li>
-            <li><strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br></li>
+            <li>
+              <strong>Ano:</strong> 1999
+            </li>
+            <li>
+              <strong>Direção:</strong> David Fincher
+            </li>
+            <li>
+              <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+            </li>
           </ul>
         </div>
         <div class="descricao-filme">
@@ -57,9 +63,15 @@
       </div>
       <div class="descricao-filme">
         <ul>
-          <li><strong>Ano:</strong></li>
-          <li><strong>Direção:</strong></li>
-          <li><strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br></li>
+          <li>
+            <strong>Ano:</strong> 2002
+          </li>
+          <li>
+            <strong>Direção:</strong> Fernando Meirelles, Katia Lund
+          </li>
+          <li>
+            <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+          </li>
         </ul>
       </div>
       <div class="descricao-filme">
@@ -90,9 +102,15 @@
     </div>
     <div class="descricao-filme">
       <ul>
-        <li><strong>Ano:</strong></li>
-        <li><strong>Direção:</strong></li>
-        <li><strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br></li>
+        <li>
+          <strong>Ano:</strong>
+        </li>
+        <li>
+          <strong>Direção:</strong>
+        </li>
+        <li>
+          <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+        </li>
       </ul>
     </div>
     <div class="descricao-filme">
