--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -21,6 +21,8 @@
         <div class="bloco-imagem">
           <img src="../images/Fight-Club1-1.webp" class="imagem-catalogo">
           <img src="../images/ydbtf997.png" class="imagem-catalogo">
+          <img src="../images/fightclub.jpg" class="imagem-catalogo">
+          <img src="../images/MV5BMTgxNzY2NjIxOV5BMl5BanBnXkFtZTcwNzU3ODMzMw@@._V1_.jpg" class="imagem-catalogo">
         </div>
         <div class="descricao-filme">
           <ul>
@@ -31,7 +33,7 @@
               <strong>Direção:</strong> David Fincher
             </li>
             <li>
-              <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+              <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla
             </li>
           </ul>
         </div>
@@ -40,12 +42,12 @@
             Onde assistir
           </div>
           <div class="bloco-imagem">
-            <div class="flex-streamming">
+            <div class="flex-streaming">
               <a href="www.netflix.com" title="Netflix">
-                <img src="../images/netflix.png" class="imagem-streamming">
+                <img src="../images/netflix.png" class="imagem-streaming">
               </a>
               <a href="www.disneyplus.com" title="Disney+">
-                <img src="../images/disneyplus.png" class="imagem-streamming">
+                <img src="../images/disneyplus.png" class="imagem-streaming">
               </a>
             </div>
           </div>
@@ -60,6 +62,8 @@
       <div class="bloco-imagem">
         <img src="../images/cidade de deus.webp" class="imagem-catalogo">
         <img src="../images/thumb-1920-340268.jpg" class="imagem-catalogo">
+        <img src="../images/AAAABVqUI7gvbpZqVehk58vxlm920iCcDzCtVhZu9vB9kPraFL_CE2_upFFNW0ZY4ZpYFRZjaeXO0tiuiRHwrJfIXMFuj0kliTlYu9i8.jpg" class="imagem-catalogo">
+        <img src="../images/cidade_de_deus-17931192.webp" class="imagem-catalogo">
       </div>
       <div class="descricao-filme">
         <ul>
@@ -70,7 +74,7 @@
             <strong>Direção:</strong> Fernando Meirelles, Katia Lund
           </li>
           <li>
-            <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+            <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla
           </li>
         </ul>
       </div>
@@ -79,12 +83,18 @@
           Onde assistir
         </div>
         <div class="bloco-imagem">
-          <div class="flex-streamming">
+          <div class="flex-streaming">
             <a href="www.netflix.com" title="Netflix">
-              <img src="../images/netflix.png" class="imagem-streamming">
+              <img src="../images/netflix.png" class="imagem-streaming">
             </a>
-            <a href="www.disneyplus.com" title="Disney+">
-              <img src="../images/disneyplus.png" class="imagem-streamming">
+            <a href="www.globoplay.globo.com" title="Globoplay">
+              <img src="../images/Globoplay_logo_2020.svg.png" class="imagem-streaming">
+            </a>
+            <a href="www.max.com" title="Max">
+              <img src="../images/Max_Logo.webp" class="imagem-streaming">
+            </a>
+            <a href="www.primevideo.com" title="Amazon Prime Video">
+              <img src="../images/AMAZONPrime_Video-Logo.wine_.webp" class="imagem-streaming">
             </a>
           </div>
         </div>
@@ -103,13 +113,13 @@
     <div class="descricao-filme">
       <ul>
         <li>
-          <strong>Ano:</strong>
+          <strong>Ano:</strong> 1976
         </li>
         <li>
-          <strong>Direção:</strong>
+          <strong>Direção:</strong> John G. Avildsen
         </li>
         <li>
-          <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla<br>
+          <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla
         </li>
       </ul>
     </div>
@@ -118,12 +128,15 @@
         Onde assistir
       </div>
       <div class="bloco-imagem">
-        <div class="flex-streamming">
-          <a href="www.netflix.com" title="Netflix">
-            <img src="../images/netflix.png" class="imagem-streamming">
+        <div class="flex-streaming">
+          <a href="www.primevideo.com" title="Amazon Prime Video">
+            <img src="../images/AMAZONPrime_Video-Logo.wine_.webp" class="imagem-streaming">
           </a>
-          <a href="www.disneyplus.com" title="Disney+">
-            <img src="../images/disneyplus.png" class="imagem-streamming">
+          <a href="www.youtube.com" title="YouTube">
+            <img src="../images/YouTube_Logo_2017.svg.png" class="imagem-streaming">
+          </a>
+          <a href="tv.apple.com" title="Apple TV+">
+            <img src="../images/appletvplus.png" class="imagem-streaming">
           </a>
         </div>
       </div>
