--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -47,7 +47,7 @@
                 <img src="../images/netflix.png" class="imagem-streaming">
               </a>
               <a href="www.disneyplus.com" title="Disney+">
-                <img src="../images/disneyplus.png" class="imagem-streaming">
+                <img src="../images/disneyplus.png" class="imagem-streaming" id="disney-streaming">
               </a>
             </div>
           </div>
@@ -94,7 +94,7 @@
               <img src="../images/Max_Logo.webp" class="imagem-streaming">
             </a>
             <a href="www.primevideo.com" title="Amazon Prime Video">
-              <img src="../images/AMAZONPrime_Video-Logo.wine_.webp" class="imagem-streaming">
+              <img src="../images/AMAZONPrime_Video-Logo.wine_.png" class="imagem-streaming">
             </a>
           </div>
         </div>
@@ -130,7 +130,7 @@
       <div class="bloco-imagem">
         <div class="flex-streaming">
           <a href="www.primevideo.com" title="Amazon Prime Video">
-            <img src="../images/AMAZONPrime_Video-Logo.wine_.webp" class="imagem-streaming">
+            <img src="../images/AMAZONPrime_Video-Logo.wine_.png" class="imagem-streaming">
           </a>
           <a href="www.youtube.com" title="YouTube">
             <img src="../images/YouTube_Logo_2017.svg.png" class="imagem-streaming">
