--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -39,10 +39,10 @@
         </div>
         <div class="descricao-filme">
           <div class="texto-centro">
-            Onde assistir
+            Onde assistir?
           </div>
           <div class="bloco-imagem">
-            <div class="flex-streaming">
+            <div class="flex-streaming flex-align">
               <a href="www.netflix.com" title="Netflix">
                 <img src="../images/netflix.png" class="imagem-streaming">
               </a>
@@ -80,7 +80,7 @@
       </div>
       <div class="descricao-filme">
         <div class="texto-centro">
-          Onde assistir
+          Onde assistir?
         </div>
         <div class="bloco-imagem">
           <div class="flex-streaming">
@@ -125,7 +125,7 @@
     </div>
     <div class="descricao-filme">
       <div class="texto-centro">
-        Onde assistir
+        Onde assistir?
       </div>
       <div class="bloco-imagem">
         <div class="flex-streaming">
