--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -104,11 +104,13 @@
         Rocky
     </div>
     <div class="bloco-imagem">
-      <img src="../images/1487691544139.avif" class="imagem-formato">
+      <img src="../images/rocky.jpg" class="imagem-formato">
     </div>
     <div class="bloco-imagem">
-      <img src="../images/cidade de deus.webp" class="imagem-catalogo">
-      <img src="../images/thumb-1920-340268.jpg" class="imagem-catalogo">
+      <img src="../images/MV5BOTczZDRmNWUtNjQ3My00NjQ0LWFmMWUtNDJiOTdkNDM1MWY1XkEyXkFqcGdeQXVyMTAwMjgyOTY4._V1_.jpg" class="imagem-catalogo">
+      <img src="../images/rocky-um-lutador.webp" class="imagem-catalogo">
+      <img src="../images/Rocky_1976.jpg" class="imagem-catalogo">
+      <img src="../images/maxresdefault.jpg" class="imagem-catalogo">
     </div>
     <div class="descricao-filme">
       <ul>
