--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -134,7 +134,7 @@
           <a href="www.primevideo.com" title="Amazon Prime Video">
             <img src="../images/AMAZONPrime_Video-Logo.wine_.png" class="imagem-streaming">
           </a>
-          <a href="www.youtube.com" title="YouTube">
+          <a href="youtube.com" title="YouTube">
             <img src="../images/YouTube_Logo_2017.svg.png" class="imagem-streaming">
           </a>
           <a href="tv.apple.com" title="Apple TV+">
