--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -43,10 +43,10 @@
           </div>
           <div class="bloco-imagem">
             <div class="flex-streaming flex-align">
-              <a href="www.netflix.com" title="Netflix">
+              <a href="https://www.netflix.com" title="Netflix">
                 <img src="../images/netflix.png" class="imagem-streaming">
               </a>
-              <a href="www.disneyplus.com" title="Disney+">
+              <a href="https://www.disneyplus.com" title="Disney+">
                 <img src="../images/disneyplus.png" class="imagem-streaming" id="disney-streaming">
               </a>
             </div>
@@ -84,16 +84,16 @@
         </div>
         <div class="bloco-imagem">
           <div class="flex-streaming">
-            <a href="www.netflix.com" title="Netflix">
+            <a href="https://www.netflix.com" title="Netflix">
               <img src="../images/netflix.png" class="imagem-streaming">
             </a>
-            <a href="www.globoplay.globo.com" title="Globoplay">
+            <a href="https://www.globoplay.globo.com" title="Globoplay">
               <img src="../images/Globoplay_logo_2020.svg.png" class="imagem-streaming">
             </a>
-            <a href="www.max.com" title="Max">
+            <a href="https://www.max.com" title="Max">
               <img src="../images/Max_Logo.webp" class="imagem-streaming">
             </a>
-            <a href="www.primevideo.com" title="Amazon Prime Video">
+            <a href="https://www.primevideo.com" title="Amazon Prime Video">
               <img src="../images/AMAZONPrime_Video-Logo.wine_.png" class="imagem-streaming">
             </a>
           </div>
@@ -131,13 +131,13 @@
       </div>
       <div class="bloco-imagem">
         <div class="flex-streaming">
-          <a href="www.primevideo.com" title="Amazon Prime Video">
+          <a href="https://www.primevideo.com" title="Amazon Prime Video">
             <img src="../images/AMAZONPrime_Video-Logo.wine_.png" class="imagem-streaming">
           </a>
-          <a href="youtube.com" title="YouTube">
+          <a href="https://www.youtube.com" title="YouTube">
             <img src="../images/YouTube_Logo_2017.svg.png" class="imagem-streaming">
           </a>
-          <a href="tv.apple.com" title="Apple TV+">
+          <a href="https://tv.apple.com" title="Apple TV+">
             <img src="../images/appletvplus.png" class="imagem-streaming">
           </a>
         </div>
