--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -33,7 +33,7 @@
               <strong>Direção:</strong> David Fincher
             </li>
             <li>
-              <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla
+              <strong>Sobre o filme:</strong> Um homem deprimido que sofre de insônia conhece um estranho vendedor chamado Tyler Durden e se vê morando em uma casa suja depois que seu perfeito apartamento é destruído. A dupla forma um clube com regras rígidas onde homens lutam. A parceria perfeita é comprometida quando uma mulher, Marla, atrai a atenção de Tyler.
             </li>
           </ul>
         </div>
@@ -74,7 +74,7 @@
             <strong>Direção:</strong> Fernando Meirelles, Katia Lund
           </li>
           <li>
-            <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla
+            <strong>Sobre o filme:</strong> Buscapé é um jovem pobre, negro e sensível, que cresce em um universo de muita violência. Ele vive na Cidade de Deus, favela carioca conhecida por ser um dos locais mais violentos do Rio. Amedrontado com a possibilidade de se tornar um bandido, Buscapé é salvo de seu destino por causa de seu talento como fotógrafo, o qual permite que siga carreira na profissão. É por meio de seu olhar atrás da câmera que ele analisa o dia a dia da favela em que vive, onde a violência aparenta ser infinita.
           </li>
         </ul>
       </div>
@@ -121,7 +121,7 @@
           <strong>Direção:</strong> John G. Avildsen
         </li>
         <li>
-          <strong>Sobre o filme:</strong> Bla bla bla bla bla bla bla
+          <strong>Sobre o filme:</strong> Rocky Balboa, um pequeno boxeador da classe trabalhadora da Filadélfia, é arbitrariamente escolhido para lutar contra o campeão dos pesos pesados, Apollo Creed, quando o adversário do invicto lutador agendado para a luta é ferido. Durante o treinamento com o mal-humorado Mickey Goldmill, Rocky timidamente começa um relacionamento com Adrian, a invisível irmã de Paulie, seu amigo empacotador de carne.
         </li>
       </ul>
     </div>
